--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "fs": "^0.0.1-security",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1"
   },
@@ -22,6 +23,8 @@
     "@vitejs/plugin-react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.1"
   }
