--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "fs": "^0.0.1-security",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
