--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.0.1",
     "fs": "^0.0.1-security",
+    "react-file-upload": "^0.0.4",
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1"
