--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "fs": "^0.0.1-security",
     "react-file-upload": "^0.0.4",
+    "react-hook-form": "^7.50.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1"
