--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.7",
     "fs": "^0.0.1-security",
+    "json-server": "^1.0.0-alpha.23",
+    "node-fs": "^0.1.7",
     "react-file-upload": "^0.0.4",
     "react-hook-form": "^7.50.0",
     "react-icons": "^4.12.0",
